<resources>
    <string name="app_name">Ofc</string>
    <string name="create">Create</string>
    <string name="amount">Amount</string>
    <string name="change">Change</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="tab_layout_tab_debit">Debit</string>
    <string name="tab_layout_tab_credit">Credit</string>
    <string name="tab_layout_tab_data">Data</string>
    <string name="text_tab_header">Свой заголовок</string>
    <string name="debit_name">Debit name</string>
    <string name="personal">Personal</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="optional">Optional</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="some_error">error</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="parish">Parish</string>
    <string name="care">Care</string>
    <string name="income">Income</string>
    <string name="_0">0</string>
</resources>
