<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dip"
    android:layout_marginRight="5dip"
    android:elevation="12dp"
    android:layout_marginTop="12dp"
    android:foreground="?attr/selectableItemBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:foreground="?attr/selectableItemBackground">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:text="name"
            android:textColor="@color/debit_name"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@+id/text_create_data"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_create_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/create_date"
            android:text="@string/create"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/text_change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"/>


        <TextView
            android:id="@+id/text_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="16dp"
            android:text="@string/change"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <TextView
            android:id="@+id/text_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/amount"
            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="@+id/amount"
            app:layout_constraintStart_toStartOf="@+id/amount"
            />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="5dip"
            android:textColor="@color/debit_amount"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/change_date"
            app:layout_constraintEnd_toEndOf="@+id/text_delete"
            app:layout_constraintStart_toStartOf="@+id/edit_button"/>

        <TextView
            android:id="@+id/create_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_amount"
            android:layout_alignStart="@+id/change_date"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:text="create_date"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/change_date"
            app:layout_constraintStart_toStartOf="@+id/change_date"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/change_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/name"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="8dp"
            android:text="change_date"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_change"/>

        <TextView
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/text_delete"
            android:text="@string/edit"
            android:textColor="@color/edit_delete"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_delete"
            />

        <TextView
            android:id="@+id/text_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:text="@string/delete"
            android:textColor="@color/edit_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>